# AI-Gen_python-flet

./: .gitignore  ad_templates.json  main.py  ollama_config.json  pyproject.toml  theme.json
src/core/: app_themes.py  config.py  history_manager.py  key_manager.py  ollama_manager.py  styles.py  template_manager.py  theme_manager.py
src/logic/: image_processing.py  zip_manager.py
src/logic/image_providers/: base_image.py  gemini_image.py  pollinations.py
src/logic/providers/: base.py  gemini_provider.py  ollama_provider.py
src/ui/: main_layout.py
src/ui/components/: prompt_box.py  toast.py
src/ui/tabs/: create_tab.py  display_tab.py  gallery_tab.py  settings_tab.py
src/ui/tabs/create_group/: gallery_tab.py
src/ui/tabs/parts/: config_part.py  input_part.py
src/ui/tabs/virtual_studio_group/: virtual_studio_tab.py
